# start_finish_detection

./: CMakeLists.txt  README.md  package.xml
src/: start_finish_detection_node.cpp
