<package format="2">
  <name>start_finish_detection</name>
  <version>0.0.1</version>
  <description>Start and finish detection node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>eufs_msgs</depend>
  <depend>kvaser_reader_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

